--- a/编译.md
+++ b/编译.md
@@ -2,7 +2,7 @@
 
 > SuperSu + Pixel + 官方7.1.2_r8 + twrp3.2.1-0 + SuperSu + XposedInstall
 
-```shell
+```
 // 获取官方7.1.2_r8代号  -- https://source.android.com/setup/start/build-numbers
 N2G47O	android-7.1.2_r8	Nougat	Nexus 5X、Nexus 6P、Pixel XL、Pixel、Pixel C	2017-05-05
 
@@ -13,39 +13,48 @@ N2G47O	android-7.1.2_r8	Nougat	Nexus 5X、Nexus 6P、Pixel XL、Pixel、Pixel C	
 
 # 2. Ubuntu 20.04.1源码编译
 ## 编译过程 ##
+
 1. 源码同步：参考https://lug.ustc.edu.cn/wiki/mirrors/help/aosp/
+```
 mkdir ~/bin
 PATH=~/bin:$PATH
 curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo  # 建议手动下载push到bin目录下
+```
+
 ## 如果上述 URL 不可访问，可以用下面的：
-## curl -sSL  'https://gerrit-googlesource.proxy.ustclug.org/git-repo/+/master/repo?format=TEXT' |base64 -d > ~/bin/repo
+```
+curl -sSL  'https://gerrit-googlesource.proxy.ustclug.org/git-repo/+/master/repo?format=TEXT' |base64 -d > ~/bin/repo
 chmod a+x ~/bin/repo
 cd aosp
 git config --global http.proxy 'socks5://192.168.43.54:7890'  # 配置git网络连接模式vpn(配置自己的vpn连接)
 repo init -u git://mirrors.ustc.edu.cn/aosp/platform/manifest -b android-8.1.0_r1
 repo sync
+```
 ## 如果提示无法连接到 gerrit.googlesource.com，可以编辑 ~/bin/repo，把 REPO_URL 一行替换成下面的：
 ## REPO_URL = 'https://gerrit-googlesource.proxy.ustclug.org/git-repo'
 
 
 2. # sailfish 8.1.0_r1为例
 # android 8.1.0_r1源码下载（自己网盘或者下方网盘链接）
+
 链接：https://pan.baidu.com/s/1K8ecDHmQ9zVSm5NfwcpBag 
 提取码：wh4n 
 复制这段内容后打开百度网盘手机App，操作更方便哦--来自百度网盘超级会员V1的分享
 
+```
 sudo apt update
-
-sudo apt-get install git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig 
-
+sudo apt-get install git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig
 sudo apt install openjdk-8-jdk
 sudo apt install python
 mkdir aosp810_r1 //创建一个工作目录用来存放aosp源码
 cd aosp810_r1
-# 将上面android 8.1.0_r1的源码解压到当前目录
+```
 
+# 将上面android 8.1.0_r1的源码解压到当前目录
+```
 git config --global user.name "Your Name" // 复制即可
 git config --global user.email "you@example.com" // 复制即可
+```
 
 # 查找手机版本对应的Build型号 -- https://source.android.com/setup/start/build-numbers
 sialfish8.1.0_r1 为 OPM1.171019.011
@@ -59,15 +68,21 @@ Vendor 	  image	  Google	Link		6d6166b9a63ce05d3596e592ac32392921923cd90ddfab7c2
 Graphics  NVIDIA			Link		0a3eda48a6ad402e3902e20178bc484513d8b78fa68c67f441595cd53924b83a
 
 # aosp810_r1目录下执行sh文件
+```
 ./extract-google_devices-sailfish.sh
 ./extract-qcom-sailfish.sh
+```
 
 # 在源码目录下的 build/envsetup.sh 最后一行加上
+```
 export LC_ALL=C
+```
 
+```
 source build/envsetup.sh
 lunch 24   // 24 指定为sailfish-userdebug版本
 make -j4   // 核数较少，开启4线程即可,编译过程报错可不管，能继续执行即可
+```
 
 # 可能产生的问题
 xxx.so：no such file
